Added mobile-first rules to the top 3 images on the page to limit data usage.

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -7,3 +7,8 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+* {
+  /* padding, etc. will honor the set width of boxes */
+  box-sizing: border-box;
+}
