--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -1,7 +1,10 @@
 .headline {
   font-weight: 300;
-  font-size: 2.875rem;
+  font-size: 1.9rem;
   color: $mainBlue;
+  @mixin atSmall {
+    font-size: 2.875rem;
+  }
   &--centered {
     text-align: center;
   }
@@ -9,7 +12,10 @@
     color: $mainOrange;
   }
   &--small {
-    font-size: 1.875rem;
+    font-size: 1.2rem;
+    @mixin atSmall {
+      font-size: 1.875rem;
+    }
   }
   &--narrow {
     max-width: 500px;
@@ -24,5 +30,8 @@
   }
   &--b-margin-large {
     margin-bottom: 1.6em;
+  }
+  &--no-t-margin {
+    margin-top: 0;
   }
 }
