Completed the testimonials section

--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -6,8 +6,13 @@
   @mixin atSmall {
     font-size: 3.75rem;
   }
+
   strong {
     font-weight: 500;
+  }
+
+  &--blue {
+    color: $mainBlue;
   }
 
   &__icon {
@@ -15,7 +20,10 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: .6rem;
+    
     @mixin atSmall {
+      position: relative;
+      top: 8px;
       margin-bottom: 0;
       margin-right: .5rem;
       margin-left: 0;
