--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -5,10 +5,12 @@
   max-width: 1236px;
   margin-left: auto;
   margin-right: auto;
+  
   &--medium {
     max-width: 976px;
   }
-  .wrapper--b-margin {
+
+  &--b-margin {
     margin-bottom: 1rem;
     @mixin atSmall {
       margin-bottom: 3.875rem;
@@ -18,5 +20,25 @@
   .wrapper {
     padding-left: 0;
     padding-right: 0;
+  }
+
+  &--no-padding-until-medium {
+    padding-left: 0;
+    padding-right: 0;
+    
+    @mixin atMedium {
+      padding-left: 18px;
+      padding-right: 18px;
+    }
+  }
+  
+  &--no-padding-until-large {
+    padding-left: 0;
+    padding-right: 0;
+    
+    @mixin atLarge {
+      padding-left: 18px;
+      padding-right: 18px;
+    }
   }
 }
