--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,3 +13,4 @@
 @import "modules/_testimonial";
 @import "modules/_row";
 @import "modules/_generic-content-container";
+@import "modules/_site-footer";
