--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -10,7 +10,12 @@
   }
 
   @mixin atMedium {
+    position: fixed;
     background-color: rgba($mainBlue, .3);
+  }
+
+  &--dark {
+    background-color: rgba(23, 51, 72, .85);
   }
 
   &__menu-icon {
@@ -113,10 +118,16 @@
     transform-origin: 50% 0;
     background-color: $mainBlue;
     padding: 25px 36px;
+    transition: transform .2s ease-out;
 
     @mixin atMedium {
       left: auto;
       transform: translateX(0);
+
+      .site-header--dark & {
+        transform: scale(.57);
+      }
+
     }
   }
 
