--- a/gulp/templates/sprites.css
+++ b/gulp/templates/sprites.css
@@ -3,7 +3,11 @@ automatically by gulp. Instead, edit gulp/templates/sprites */
 {{#shapes}}
   {{#first}}
   .icon {
-    background-image: url('./assets/images/sprites/{{{sprite}}}');
+    background-image: url('/assets/images/sprites/{{{sprite}}}');
+  }
+
+  .no-svg .icon {
+    background-image: url('/assets/images/sprites/{{#replaceSvgWithPng}}{{{sprite}}}{{/replaceSvgWithPng}}');
   }
   {{/first}}
   .icon--{{base}} {
